--- a/GzKitchen/FormPayment.tr.resx
+++ b/GzKitchen/FormPayment.tr.resx
@@ -118,30 +118,32 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="lblPassword.Size" type="System.Drawing.Size, System.Drawing">
-    <value>34, 16</value>
+  <data name="lblTableNo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 16</value>
   </data>
-  <data name="lblPassword.Text" xml:space="preserve">
-    <value>Şifre</value>
+  <data name="lblTableNo.Text" xml:space="preserve">
+    <value>Masa No :</value>
   </data>
-  <data name="lblEmail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>54, 16</value>
+  <data name="btnProceedPayment.Text" xml:space="preserve">
+    <value>Ödeme Al</value>
   </data>
-  <data name="lblEmail.Text" xml:space="preserve">
-    <value>E Posta</value>
+  <data name="lblTotalPayment.Size" type="System.Drawing.Size, System.Drawing">
+    <value>95, 16</value>
   </data>
-  <data name="btnLogin.Text" xml:space="preserve">
-    <value>Giriş Yap</value>
+  <data name="lblTotalPayment.Text" xml:space="preserve">
+    <value>Toplam Ücret :</value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        5gAAAOYBIly6UQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADHSURBVFhH7ZZL
-        DsIwDEQjDka5B7ApbOD+Wz4zlSxFVTCxSZoFftKoX48naqImBUGgsIPO0GG58sFaetDLDAtf0AO68IYR
-        1rCWHkfesML0YsDjFaqF7+a1E+RihsToCd2gb3hqVNaGd+gTzZsLNSG6NRe0EN2bC6UQmzUX1jM8P7es
-        lJ/IR73ZyHNKAbTV0ZShn6A04UoTswvabNeeNaGmQbcQFuPmITyGzUIM/x2fIDEYsiHhNooh9suVD46c
-        Hq4tWRD8Aym9AWAhfjufFzC/AAAAAElFTkSuQmCC
-</value>
+  <data name="lblAmountTendered.Size" type="System.Drawing.Size, System.Drawing">
+    <value>85, 16</value>
+  </data>
+  <data name="lblAmountTendered.Text" xml:space="preserve">
+    <value>Alınan Ücret :</value>
+  </data>
+  <data name="lblChange.Size" type="System.Drawing.Size, System.Drawing">
+    <value>72, 16</value>
+  </data>
+  <data name="lblChange.Text" xml:space="preserve">
+    <value>Para Üstü :</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
