--- a/GzKitchen/FormManageTable.tr.resx
+++ b/GzKitchen/FormManageTable.tr.resx
@@ -119,22 +119,10 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="lblName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>31, 16</value>
+    <value>68, 16</value>
   </data>
   <data name="lblName.Text" xml:space="preserve">
-    <value>İsim</value>
-  </data>
-  <data name="lblPrice.Size" type="System.Drawing.Size, System.Drawing">
-    <value>36, 16</value>
-  </data>
-  <data name="lblPrice.Text" xml:space="preserve">
-    <value>Fiyat</value>
-  </data>
-  <data name="lblDescription.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 16</value>
-  </data>
-  <data name="lblDescription.Text" xml:space="preserve">
-    <value>Açıklama</value>
+    <value>Masa No :</value>
   </data>
   <data name="btnSave.Text" xml:space="preserve">
     <value>Kaydet</value>
@@ -204,10 +192,10 @@
         6gAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="lblPicture.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>46, 16</value>
   </data>
-  <data name="lblPicture.Text" xml:space="preserve">
+  <data name="label1.Text" xml:space="preserve">
     <value>Resim</value>
   </data>
 </root>
